--- a/styles/main.css
+++ b/styles/main.css
@@ -201,7 +201,8 @@ footer{
   }
 
   .row{
-    flex-direction: column;
+    display: flex;
+    flex-direction: row-reverse;
   }
   .sidy-by-side{
     flex-direction: column;
